--- a/.env
+++ b/.env
@@ -24,9 +24,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mi23_ventaris
-DB_USERNAME=mi23_ventaris
-DB_PASSWORD=ventaris123
+DB_DATABASE=new_ventaris
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
